flux/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snackquest
  namespace: app-snackquest
spec:
  rules:
  - host: snackquest.nemes.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snackquest-svc
            port:
              number: 8000
